--- a/src/users/User/User.module.scss
+++ b/src/users/User/User.module.scss
@@ -1,6 +1,11 @@
 .wrapper{
-  width: 80%;
+  width: 30%;
   margin: 0 auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  gap:50px;
+  .name{
+    width: 30%;
+  }
 }
